Bug 1319116 - Part 1 - Firefox print settings for header and footer not remembered r=jwatt

Load the saved printer-specific settings prefs before displaying the print dialog.

PrintSettings received from sandboxed content processes do not include the printer name because access to the printer server is blocked by sandboxing.

Differential Revision: https://phabricator.services.mozilla.com/D23888