widget/cocoa/nsPrintSettingsX.mm
@@ -457,3 +457,23 @@ nsresult nsPrintSettingsX::SetCocoaPaperSize(double aWidth, double aHeight) {
 
   NS_OBJC_END_TRY_ABORT_BLOCK_NSRESULT;
 }
+
+void nsPrintSettingsX::SetPrinterNameFromPrintInfo() {
+  NS_OBJC_BEGIN_TRY_ABORT_BLOCK;
+
+  // Don't attempt to call this from child processes.
+  // Process sandboxing prevents access to the print
+  // server and printer-related settings.
+  MOZ_ASSERT(XRE_IsParentProcess());
+  MOZ_ASSERT(mPrintInfo);
+
+  NSMutableDictionary* printInfoDict = [mPrintInfo dictionary];
+  NSString* nsPrinterNameValue = [printInfoDict objectForKey:@"NSPrinterName"];
+  if (nsPrinterNameValue) {
+    nsAutoString printerName;
+    nsCocoaUtils::GetStringForNSString(nsPrinterNameValue, printerName);
+    mPrinter.Assign(printerName);
+  }
+
+  NS_OBJC_END_TRY_ABORT_BLOCK;
+}
